# silver

./: .gitignore  Cargo.toml  LICENSE  justfile  rust-toolchain.toml  rustfmt.toml
.github/workflows/: lint.yaml  lint.yml  test.yaml  test.yml
crates/beacon_state/: .gitignore  Cargo.toml  Makefile  README.md
crates/beacon_state/src/: arena.rs  bls.rs  decompose.rs  epoch_transition.rs  fork_choice.rs  lib.rs  shuffling.rs  ssz_hash.rs  state_transition.rs  ticker.rs  tile.rs  types.rs  validate.rs
crates/beacon_state/tests/: common.rs  ef_common.rs  ef_epoch_processing.rs  ef_finality.rs  ef_merkle_proof.rs  ef_operations.rs  ef_random.rs  ef_rewards.rs  ef_sanity_blocks.rs  ef_sanity_slots.rs  ef_ssz_static.rs  ssz_view_fixtures.rs  sync_scenarios.rs
crates/beacon_state/tests/sync_scenarios/scenario_1_checkpoint_catchup/: steps.yaml
crates/common/: Cargo.toml
crates/common/src/: arena.rs  error.rs  gossip.rs  id.rs  lib.rs  spine.rs  ssz_view.rs  util.rs  wither.rs
crates/common/src/enr/: builder.rs  mod.rs  node_id.rs
crates/common/src/enr/keys/: k256_key.rs  mod.rs  secp256k1_key.rs
crates/common/src/gossip/: hash.rs
crates/common/src/spine/: messages.rs  stream_id.rs  stream_protocol.rs  tcache.rs
crates/common/src/spine/tcache/: consumer.rs  producer.rs
crates/compression/: Cargo.toml  build.rs
crates/compression/protobuf/: gossipsub.proto
crates/compression/src/: control.rs  dedup.rs  hash.rs  lib.rs  mcache.rs  message.rs  tile.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: config.rs  crypto.rs  discovery.rs  discv5.rs  kbucket.rs  lib.rs  message.rs  query_pool.rs
crates/discovery/tests/: e2e.rs
crates/e2e/: Cargo.toml  README.md
crates/e2e/examples/: gossip_oneway.rs
crates/e2e/src/: harness.rs  inject.rs  lib.rs  stack.rs  stats.rs
crates/e2e/tests/: gossip_oneway.rs
crates/network/: Cargo.toml  build.rs
crates/network/benches/: ip_filter.rs  quic_basic.rs  quic_pingpong.rs
crates/network/protobuf/: compat.proto  identify.proto
crates/network/src/: lib.rs  portable.rs  tile.rs  unix.rs
crates/network/src/p2p/: mod.rs
crates/network/src/p2p/handlers/: connection.rs  mod.rs  stream.rs
crates/network/src/p2p/handlers/stream/: tcache.rs
crates/network/src/p2p/quic/: endpoint.rs  mod.rs  peer.rs
crates/network/src/p2p/stream/: mod.rs  p2p_stream.rs  snappy.rs  state.rs  stream.rs
crates/network/src/p2p/stream/protocol/: gossipsub.rs  identity.rs  mod.rs  rpc.rs
crates/network/src/p2p/tls/: certificate.rs  mod.rs  verifier.rs
crates/network/src/socket/: linux.rs  mod.rs  portable.rs  unix.rs
crates/peer/: Cargo.toml
crates/peer/src/: lib.rs  manager.rs  params.rs  scoring.rs  state.rs  wither.rs
docs/: p2p-ladder-diagrams.md
