[workspace]
members = [
  "crates/common",
  "crates/network"
]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/gattaca-com/silver"
rust-version = "1.91.0"
version = "0.0.1"

[profile.release-prod]
codegen-units = 1
debug = false
inherits = "release"
lto = "fat"
opt-level = 3
panic = "abort"
split-debuginfo = "off"

[profile.release-alpha]
codegen-units = 1
debug = true
inherits = "release"
lto = true
opt-level = 3
split-debuginfo = "off"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

# Release profile used when running locally.
# Build optimised, but with all debug checks enabled.
[profile.release-with-debug]
debug-assertions = true
inherits = "dev"
opt-level = 3

[workspace.dependencies]
silver-common = { path = "crates/common" }
flux = { git = "https://github.com/gattaca-com/flux", rev = "899e5fa" }

# External
buffa = "0.2.0"
bytes = "1.11.1"
criterion = { features = ["async_std", "async_tokio"], version = "0.5.1" }
hdrhistogram = "7.5.4"
k256 = { version = "0.13", features = ["ecdsa"] }
libc = "0.2"
mio = { features = ["net", "os-poll"], version = "1.0.4" }
pprof = { features = ["criterion", "flamegraph"], version = "0.13" }
quinn-proto = "0.11.14"
rand = "=0.8.5"
rand_core = "=0.6.4"
rcgen = "0.14.7"
ring = "0.17"
rustls = "0.23.37"
snap = "1.1.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.23"
x509-parser = { version = "0.17", features = ["verify"] }
yasna = "0.5"

[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"
