[workspace]
members = [
  "crates/common",
  "crates/compression",
  "crates/discovery",
  "crates/network"
]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/gattaca-com/silver"
rust-version = "1.91.0"
version = "0.0.1"

[profile.release-prod]
codegen-units = 1
debug = false
inherits = "release"
lto = "fat"
opt-level = 3
panic = "abort"
split-debuginfo = "off"

[profile.release-alpha]
codegen-units = 1
debug = true
inherits = "release"
lto = true
opt-level = 3
split-debuginfo = "off"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

# Release profile used when running locally.
# Build optimised, but with all debug checks enabled.
[profile.release-with-debug]
debug-assertions = true
inherits = "dev"
opt-level = 3

[workspace.dependencies]
silver-common = { path = "crates/common" }
silver-discovery = {path = "crates/discovery" }
flux = { git = "https://github.com/gattaca-com/flux", rev = "f902769fe25915d8e58b50469f4a8b76f6045870"}
flux-utils = { git = "https://github.com/gattaca-com/flux", rev = "f902769fe25915d8e58b50469f4a8b76f6045870", features = ["bytes"]}

# External
aes = "0.8"
aes-gcm = "0.10"
alloy-rlp = { version = "0.3.12", default-features = false, features = ["derive", "std"] }
base64 = "0.22"
buffa = "0.2.0"
bytes = "1.11.1"
criterion = { version = "0.5.1", features = ["async_std", "async_tokio"] }
ctr = "0.9"
fxhash = "0.2.1"
hdrhistogram = "7.5.4"
hex = "0.4"
hkdf = "0.12"
libc = "0.2"
mio = { version = "1.0.4", features = ["net", "os-poll"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
quinn-proto = "0.11.14"
rand = "0.8.5"
rand_core = "0.6.4"
rcgen = "0.14.7"
ring = "0.17"
rustc-hash = "2"
secp256k1 = { version = "0.30", features = ["global-context", "rand", "hashes"] }
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
snap = "1.1.1"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.23"
uint = "0.9"
x509-parser = { version = "0.17", features = ["verify"] }
yasna = "0.5"

[workspace.lints.clippy]
too_long_first_doc_paragraph = "allow"
