[package]
name = "silver-common"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-rlp.workspace = true
base64.workspace = true
bytes.workspace = true
flux.workspace = true
hex.workspace = true
quinn-proto.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
secp256k1.workspace = true
serde.workspace = true
sha3.workspace = true
snap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json = "1.0.135"

[lints]
workspace = true
