[package]
name = "discovery"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
alloy-rlp.workspace = true
ctr.workspace = true
bytes.workspace = true
flux.workspace = true
hex.workspace = true
flux-utils.workspace = true
hkdf.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
silver-common.workspace = true
rustc-hash.workspace = true
secp256k1.workspace = true
thiserror.workspace = true
tracing.workspace = true
uint.workspace = true

[dev-dependencies]
rand.workspace = true
silver-common.workspace = true

[lints]
workspace = true
