[package]
name = "silver_e2e"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
buffa.workspace = true
bytes.workspace = true
flux.workspace = true
hdrhistogram.workspace = true
quinn-proto.workspace = true
rand.workspace = true
silver_common.workspace = true
silver_compression.workspace = true
silver_discovery.workspace = true
silver_network.workspace = true
snap.workspace = true
tempfile = "3"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "gossip_oneway"

[lints]
workspace = true
