[package]
name = "silver_network"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
buffa.workspace = true
bytes.workspace = true
flux.workspace = true
libc.workspace = true
mio.workspace = true
quinn-proto.workspace = true
rcgen.workspace = true
ring.workspace = true
secp256k1.workspace = true
rustls.workspace = true
silver_common.workspace = true
silver_discovery.workspace = true
snap.workspace = true
tracing.workspace = true
x509-parser.workspace = true
yasna.workspace = true

[build-dependencies]
buffa-build = "0.2.0"

[dev-dependencies]
criterion.workspace = true
hdrhistogram.workspace = true
pprof.workspace = true
rand.workspace = true
rand_core.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bench]]
harness = false
name = "quic_basic"

[[bench]]
harness = false
name = "quic_pingpong"
